# easy_annotator

./: .gitignore  README.md  pyproject.toml
src/: app.py
src/api/: images.py  project.py
src/constants/: general_properties.py  mongo_properties.py
src/entities/: od_model.py
src/static/css/: style.css
src/static/js/: script.js
src/templates/: index.html
src/utils/: mongo_utils.py
