[tool.poetry]
name = "easy-annotator"
version = "0.1.0"
description = ""
authors = ["Berlin benilo <berlin@thoughtclan.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beanie = "^1.27.0"
pymongo = "4.8.0"
fastapi = {extras = ["standard"], version = "^0.115.3"}
motor = "3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
